# StellarSplit

./: CONTRIBUTORS.md  package-lock.json  package.json
backend/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/audit-trail/: audit-report.json
backend/src/batch/: batch.controller.spec.ts
backend/src/collaboration/: collaboration.controller.spec.ts  collaboration.service.ts
backend/src/common/: common.module.ts
backend/src/config/: database.config.ts  (+2 more)
contracts/: Cargo.toml
contracts/achievement-badges/src/: eligibility.rs  lib.rs  metadata.rs  storage.rs  test.rs
contracts/dispute-resolution/src/: events.rs  test.rs
contracts/flash-loan/src/: test.rs
contracts/multi-sig-splits/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/path-payment/src/: error_map.rs  lib.rs  test.rs
contracts/reminder/: Cargo.toml
contracts/reminder/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/scripts/: ci-contracts.sh
contracts/split-escrow/src/: events.rs  lib.rs  test.rs  test_helpers.rs  types.rs
contracts/split-template/src/: id.rs  lib.rs  name_index.rs  test.rs  types.rs
contracts/staking/src/: errors.rs  event_assertions.rs  lib.rs  test.rs
docs/: COMPONENTS.md  CONTRACTS.md  DEPLOYMENT.md  STELLAR_INTEGRATION.md  contracts-status.md  payment-uri-flow.md
docs/runbooks/: healthchecks.md
docs/scripts/: generate-components-docs.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
(+119 files in other folders)
