[workspace]
resolver = "2"

members = [
    "achievement-badges",
    "flash-loan",
    "dispute-resolution",
    "path-payment",
    "split-template",
    "staking",
    "split-escrow",
    "multi-sig-splits",
    "reminder",
]
# Experimental / broken crates remain in the workspace so they can share
# workspace dependencies and be compiled locally, but they are excluded from
# the CI-supported set (see scripts/ci-contracts.sh).
#
# Crates currently excluded from CI:
# - split-escrow: many compilation errors (draft/broken source)
# - multi-sig-splits: E0507 move error (needs ownership fix)
exclude = [
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
